--- a/Runtime/be.tsepton.ummi.runtime.asmdef
+++ b/Runtime/be.tsepton.ummi.runtime.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "ummi",
     "rootNamespace": "ummi",
-    "references": ["GUID:07dcbb6497358493fa23aaaad4b6b054"],
+    "references": [
+        "GUID:07dcbb6497358493fa23aaaad4b6b054",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
